// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login reducer should have an get user fail state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": true,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an get user pending state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": true,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an get user success state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": Object {
    "emailAddress": "user@gmail.com",
    "token": "TOKENDOESNOTRETURN",
  },
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an initial state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an login fail state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": true,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an login pending state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": true,
  "token": "",
}
`;

exports[`Login reducer should have an login success state 1`] = `
Object {
  "checkedLoggedIn": true,
  "data": Object {
    "extraTestData": Object {},
  },
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": true,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "myJWTAuthtoken",
}
`;

exports[`Login reducer should have an logout state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an reload fail state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": true,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an reload success state 1`] = `
Object {
  "checkedLoggedIn": true,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an signup fail state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": true,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": false,
  "token": "",
}
`;

exports[`Login reducer should have an signup pending state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": false,
  "loading": true,
  "token": "",
}
`;

exports[`Login reducer should have an signup success state 1`] = `
Object {
  "checkedLoggedIn": false,
  "data": null,
  "fetchLoading": false,
  "hasError": false,
  "isAdmin": false,
  "isLoggedIn": false,
  "isVerifyAccountModalVisible": true,
  "loading": false,
  "token": "",
}
`;
